rename methods, fields bug fix